fix(list): prevent z-index overlapping problems by isolating the component

--- a/src/style/internal/z-index.scss
+++ b/src/style/internal/z-index.scss
@@ -6,12 +6,9 @@ $date-picker--flatpickr-adapter--flatpickr-day--after: -1 !default;
 $input-field--formatted-value: 1 !default;
 $input-field--input-with-formatted-value: 2 !default;
 $input-field--mdc-text-field__input--readonly: 1 !default;
-$list--has-interactive-items--mdc-list-item--hover: 1 !default;
-$list-static-actions-list: 1 !default;
 $tab-bar--active-tab: 2 !default;
 $table--has-interactive-rows--selectable-row--hover: 2 !default;
 $table--limel-table--row-selector: 1 !default;
 $popover-before: -1 !default;
 $button-group-radio-button-keyboard-focused: 1 !default;
-$list-mdc-list-item: 0 !default;
 $limel-circular-progress-value: 1 !default;
